# solid-cli

./: .coverage  COMPETITIVE_ANALYSIS.md  Dockerfile  FILES_CHECKLIST.md  IMPLEMENTATION.md  QUALITY_REPORT.md  README.md  SUBMISSION_DRAFT.md  TECHNICAL_DEBT.md  TEST_IMPLEMENTATION.md  TEST_SUITE.md  WORKS_CITED.md  action.yml  pyproject.toml  pytest.ini
docs/: DELIVERY_SUMMARY.md  TEST_QUICK_REFERENCE.md
scripts/: capture_real_benchmark.py  capture_real_help.py  create_actual_demo.py  create_fuse_demo.py  create_performance_demo.py  create_reasoning_demo.py  generate_demo.py  read_papers.py
solid-cli/: benchmark.py  pyproject.toml  run_tui_final.py  run_tui_server.py
solid-cli/src/solid_cli/: __init__.py
solid_cli/: __init__.py  acl.py  agent.py  auth.py  client.py  main.py  mount.py  reasoner.py  sync.py  theme.py  tmux.py  tui.py
solid_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_acl.py  test_agent.py  test_auth.py  test_cli.py  test_client.py  test_mount.py  test_reasoner.py  test_sync.py  test_tui.py
