[project]
name = "solid-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dickbird", email = "cafetechne@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
